⚡️ :: (#162) <SellDreamFindService> sellDreamResponseOf 공통로직 분리